--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </head>
     <body>
         <h1>
-            Starbucks Locations
+            Factories Locations
         </h1>
         <h5 id="title"></h5>
         <div id="map">
