--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         type: 'scatter',
                         symbolSize: 10,
                         coordinateSystem: 'geo',
-                        symbol: 'image://data:image/gif;base64,R0lGODlhEAAQAMQAAORHHOVSKudfOulrSOp3WOyDZu6QdvCchPGolfO0o/XBs/fNwfjZ0frl3/zy7////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAkAABAALAAAAAAQABAAAAVVICSOZGlCQAosJ6mu7fiyZeKqNKToQGDsM8hBADgUXoGAiqhSvp5QAnQKGIgUhwFUYLCVDFCrKUE1lBavAViFIDlTImbKC5Gm2hB0SlBCBMQiB0UjIQA7',
+                        symbol: 'image://https://localhost/fac01.png',
                         itemStyle: {
                             normal: {
                                 borderColor: '#333',
