--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         type: 'scatter',
                         symbolSize: 10,
                         coordinateSystem: 'geo',
-                        symbol: 'image://https://localhost/fac01.png',
+                        symbol: 'image://https://jiujiale.github.io/factoryDemo/fac01.png',
                         itemStyle: {
                             normal: {
                                 borderColor: '#333',
