--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
                 countryMapChart.setOption({
                     series: [{
                         type: 'scatter',
-                        symbolSize: 10,
+                        symbolSize: 18,
                         coordinateSystem: 'geo',
-                        symbol: 'image://https://jiujiale.github.io/factoryDemo/fac01.png',
+                        symbol: 'image://https://jiujiale.github.io/factoryDemo/fac01.svg',
                         itemStyle: {
                             normal: {
                                 borderColor: '#333',
